cluster/apps/networking/traefik/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: "traffic-light"
    hajimari.io/appName: "traefik"
spec:
  tls:
    - secretName: "tls.traefik-dashboard"
      hosts:
        - "traefik.${SECRET_DOMAIN}"
  rules:
    - host: traefik.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
